large change in character:damage_distribution

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ __pycache__/*
 *.ods
 *.pyc
 *.xml
+*.txt
+resources/wiki_items_working_list.csv
+resources/bitterkoekje_items_bedevere_modified_specials_sorted_filtered.csv
+resources/bitterkoekje_items_bedevere_modified_specials_only.csv
+resources/.~lock*
