--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ resources/wiki_items_working_list.csv
 resources/bitterkoekje_items_bedevere_modified_specials_sorted_filtered.csv
 resources/bitterkoekje_items_bedevere_modified_specials_only.csv
 resources/.~lock*
+*.egg-info
