--- a/.pylintrc
+++ b/.pylintrc
@@ -1,5 +1,5 @@
 [MASTER]
 docstring-min-length=10
-disable=missing-function-docstring,missing-class-docstring,missing-module-docstring
+disable=missing-function-docstring,missing-class-docstring,missing-module-docstring,no-method-argument
 [FORMAT]
-good-names=i,j,x,y,id
+good-names=i,j,x,y,id,g,k,v,tl,mh
