proper abstraction for TrackedValue

--- a/.pylintrc
+++ b/.pylintrc
@@ -2,4 +2,4 @@
 docstring-min-length=10
 disable=missing-function-docstring,missing-class-docstring,missing-module-docstring,no-method-argument
 [FORMAT]
-good-names=i,j,x,y,id,g,k,v,tl,mh
+good-names=i,j,x,y,id,g,k,v,tl,mh,s
