beeg commit: the great refactoring

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ src/osrs_tools/gear_from_osrsbox.py
 src/osrs_tools/gear_from_osrsbox.py
 src/osrs_tools/gear_from_osrsbox.py
 scratch.py
+_character.py
