--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,12 +4,22 @@
     "editor.codeActionsOnSave": {
         "source.organizeImports": true
     },
-    "python.formatting.provider": "autopep8",
+    "python.formatting.provider": "black",
     "python.linting.enabled": true,
-    "python.linting.pylintEnabled": false,
+    "python.linting.pylintEnabled": true,
     "python.analysis.typeCheckingMode": "basic",
-    "python.linting.flake8Enabled": true,
+    "python.linting.flake8Enabled": false,
     "python.testing.pytestArgs": [],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
+    "python.linting.pylintArgs": [
+        "--max-line-length=120"
+    ],
+    "files.exclude": {
+        "**/__pycache__": true,
+        "**/*.egg-info": true
+    },
+    "python.formatting.blackArgs": [
+        "--line-length=120"
+    ],
 }
