--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,22 +2,10 @@
 requires = ["setuptools>57.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
-[tool.pytest.ini_options]
-addopts = "--cov=osrs_tools"
-testpaths = [
-    "tests",
-]
+[project]
+name = "osrs-tools"
+version = "2.0.0"
 
-[tool.mypy]
-mypy_path = "src"
-check_untyped_defs = true
-disallow_any_generics = true
-ignore_missing_imports = true
-no_implicit_optional = true
-show_error_codes = true
-strict_equality = true
-warn_redundant_casts = true
-warn_return_any = true
-warn_unreachable = true
-warn_unused_configs = true
-no_implicit_reexport = true
+[tool.setuptools.packages.find]
+where = ["src"]
+namespace = false
